isaac_ros-dev/src/data_logger_py/log/build_2024-11-25_20-47-12/data_logger_py/stdout_stderr.log
running egg_info
writing build/data_logger_py/data_logger_py.egg-info/PKG-INFO
writing dependency_links to build/data_logger_py/data_logger_py.egg-info/dependency_links.txt
writing entry points to build/data_logger_py/data_logger_py.egg-info/entry_points.txt
writing requirements to build/data_logger_py/data_logger_py.egg-info/requires.txt
writing top-level names to build/data_logger_py/data_logger_py.egg-info/top_level.txt
reading manifest file 'build/data_logger_py/data_logger_py.egg-info/SOURCES.txt'
writing manifest file 'build/data_logger_py/data_logger_py.egg-info/SOURCES.txt'
running build
running build_py
copying data_logger_py/data_logger_py_node.py -> /home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/build/data_logger_py/build/lib/data_logger_py
running install
running install_lib
copying /home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/build/data_logger_py/build/lib/data_logger_py/data_logger_py_node.py -> /home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/install/data_logger_py/lib/python3.10/site-packages/data_logger_py
byte-compiling /home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/install/data_logger_py/lib/python3.10/site-packages/data_logger_py/data_logger_py_node.py to data_logger_py_node.cpython-310.pyc
  File "/home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/install/data_logger_py/lib/python3.10/site-packages/data_logger_py/data_logger_py_node.py", line 82
    self.new_file_txt.write(str(timestamp) + " left_frame_" + str(image_count) + " right_frame_" + str(image_count) 
                           ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
removing '/home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/install/data_logger_py/lib/python3.10/site-packages/data_logger_py-0.0.0-py3.10.egg-info' (and everything under it)
Copying build/data_logger_py/data_logger_py.egg-info to /home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/install/data_logger_py/lib/python3.10/site-packages/data_logger_py-0.0.0-py3.10.egg-info
running install_scripts
Installing data_logger_py_node script to /home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/install/data_logger_py/lib/data_logger_py
writing list of installed files to '/home/snow/autonomousvehiclelab/isaac_ros-dev/src/data_logger_py/build/data_logger_py/install.log'
